deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiii-react-zero-to-hero-ns
  labels:
    name: kiii-react-zero-to-hero-ns
