deployment/podspec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiii-react-zero-to-hero
  labels:
    app.kubernetes.io/name: kiii-react-zero-to-hero
spec:
  containers:
    - name: kiii-react-zero-to-hero
      image: darknet00/kii-react-zero-to-hero
      ports:
        - containerPort: 5000
