deployment/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web-service
spec:
  ports:
    - port: 5000
      name: web-service
  type: NodePort
  selector:
    app.kubernetes.io/name: kiii-react-zero-to-hero
